# SeasonalForge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  bbg.py  data_provider.py  engine.py  pyproject.toml  requirements.txt  strategies.yaml  ui_components.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
tests/: test_bbg_response_parsing.py  test_data_provider_cache_dir.py  test_data_provider_dates.py  test_engine_build_report_empty.py  test_engine_fill_policy.py  test_engine_leg_contract_values.py  test_engine_lifecycle_alignment.py  test_engine_unit_conversions.py  test_strategy_browser_filters.py  test_strategy_value_source.py  test_ticker_root_support.py  test_ui_heatmap_ordering.py  test_ui_trade_metrics.py
